fix messages on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -309,7 +309,7 @@ footer i {
 /* ---------------------------- Messages */
 .message-container {
   position: fixed;
-  width: 100%;
+  width: 80%;
   bottom: 0;
   left: 0;
 }
